@startuml
skinparam classAttributeIconSize 0

' ===========================
' ENUMS
' ===========================
enum Role {
  ADMIN
  OWNER
  CLIENT
  ORGANISATEUR
}
enum Status {
  ACTIVE
  INACTIVE
  BANNED
}

enum Sport {
    FOOTBALL
    BASKETBALL
    FUTSAL
    TENNIS
    PADDLE
    BADMINTON
    VOLLEYBALL
}

enum ReservationStatus {
  PENDING
  CONFIRMED
  CANCELLED
}
enum SubscriptionStatus {
  ACTIVE
  EXPIRED
  CANCELLED
}
enum OrderStatus {
  PENDING
  PAID
  CANCELLED
  SHIPPED
}
enum PaymentStatus {
  PENDING
  COMPLETED
  FAILED
  REFUNDED
}
enum CartStatus {
  ACTIVE
  CHECKED_OUT
}
enum ItemType {
  SALE
  RENTAL
}
enum PaymentMethod {
  CARD
  PAYPAL
  STRIPE
  CASH
}
enum NotificationType {
  SYSTEM
  USER
  DISCOUNT
}
enum RecipientStatus {
  UNREAD
  READ
  DISMISSED
}

enum TournamentStatus {
  AWAITING_APPROVAL
  APPROVED
  CANCELLED
  FINISHED
}

' ===========================
' CLASSES
' ===========================

class User {
  - id: Long
  - name: String
  - email: String
  - passwordHash: String
  - phone: String
  - role: Role
  - status: Status
}

class Terrain {
  - id: Long
  - ownerId: Long
  - name: String
  - type: Sport
  - location: String
  - pricePerHour: Decimal
  - description: String
  - isRentable: Boolean
  - isSellable: Boolean
}

class TerrainAvailability {
  - id: Long
  - terrainId: Long
  - date: Date
  - timeSlot: String
  - isAvailable: Boolean
}

class Reservation {
  - id: Long
  - userId: Long
  - startDate: Date
  - endDate: Date
  - totalPrice: Decimal
  - status: ReservationStatus
}

class ReservationHistory {
  - id: Long
  - reservationId: Long
  - timestamp: DateTime
}

class SubscriptionPlan {
  - id: Long
  - name: String
  - pricePerMonth: Decimal
  - description: String
}

class Subscription {
  - id: Long
  - userId: Long
  - planId: Long
  - startDate: Date
  - endDate: Date
  - status: SubscriptionStatus
}

class Tournament {
  - id: Long
  - organiserId: Long
  - name: String
  - date: Date
  - location: String
  - rules: String
  - prize: String
  - type: Sport
  - status: TournamentStatus
}

class TournamentRegistration {
  - id: Long
  - tournamentId: Long
  - userId: Long
}

class Product {
  - id: Long
  - ownerId: Long
  - name: String
  - category: String
  - price: Decimal
  - rentalPricePerDay: Decimal
  - stock: Integer
  - isSellable: Boolean
  - isRentable: Boolean
}

class Cart {
  - id: Long
  - userId: Long
  - status: CartStatus
}

class CartItem {
  - id: Long
  - cartId: Long
  - productId: Long
  - quantity: Integer
  - itemType: ItemType
  - rentalStart: Date
  - rentalEnd: Date
  - unitPrice: Decimal
}

class Order {
  - id: Long
  - userId: Long
  - amount: Decimal
  - status: OrderStatus
}

class Payment {
  - id: Long
  - orderId: Long
  - method: PaymentMethod
  - status: PaymentStatus
  - validatedBy: Long
}

class Discount {
  - id: Long
  - code: String
  - discountValue: Decimal
  - expirationDate: Date
  - active: Boolean
}

class Notification {
  - id: Long
  - title: String
  - message: String
  - type: NotificationType
}

class NotificationRecipient {
  - id: Long
  - notificationId: Long
  - userId: Long
  - status: RecipientStatus
  - receivedAt: DateTime
}

' ===========================
' RELATIONSHIPS
' ===========================

Role "1" -- "0..*" User
Status "1" -- "0..*" User

User "1" -- "1" Cart
User  "1" -- "*" ReservationHistory

User "1" -- "0..*" Terrain
Terrain "1" -- "0..*" TerrainAvailability

Terrain -- "1" Sport

Reservation "0..*" -- "1" Terrain

User "1" -- "0..*" Reservation
User "1" -- "0..1" Subscription
SubscriptionPlan "1" -- "1" Subscription

Tournament "1" -- "0..*" TournamentRegistration
TournamentRegistration "1" -- "0..*" User
Tournament -- "1" Sport
TournamentStatus "1" -- Tournament

User "1" -- "0..*" Product

CartStatus "1" -- Cart
Cart "1" -- "0..*" CartItem
Order "1" -- "0..*" CartItem
Product "1" -- "1" CartItem

User "1" -- "0..*" Order

Payment "1" -- "1" Order
PaymentStatus "1" -- Payment
PaymentMethod "1" -- Payment
User "1" -- "0..*" Payment

' DISCOUNTS
Cart "0..*" -- "1" Discount
Reservation "0..*" -- "1" Discount
Product "1" -- "0..*" Discount

Notification "1" -- "0..*" NotificationRecipient
NotificationRecipient "1" -- "1" User

ReservationStatus "1" -- Reservation
SubscriptionStatus "1" -- Subscription
OrderStatus "1" -- Order
ItemType "1" -- CartItem
NotificationType "1" -- Notification
RecipientStatus "1" -- NotificationRecipient

@enduml
